--- a/index.ipynb
+++ b/index.ipynb
@@ -95,11 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number_of_weeks = 3 # 3"
+    "number_of_weeks  # 3"
    ]
   },
   {
